responsive design for two breakpoints

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   border: 1px dashed rgba(79, 128, 81, 0.64);
+
 }
 #intro {
   height: 8vh;
@@ -34,3 +35,110 @@
 #storyone p {
   width: 30vw;
 }
+#picdiv {
+float: left;
+width: 24vw;
+height: 30vh;
+margin: 1vh 1vw;
+}
+#picdiv img {
+display: block;
+height: 10vh;
+}
+#textdiv {
+  height: 30vh;
+  float: left;
+  margin: 1vh 1vw;
+  width: 24vw;
+}
+#textdiv p {
+  height: 10vh;
+}
+#divstories {
+  float: left;
+  height: 30vh;
+  width: 24vw;
+  margin: 1vh 1vw;
+}
+#divstories div {
+  height: 10vh;
+}
+#testblock {
+  overflow: hidden;
+  width: 80vw;
+  margin: 0 auto;
+}
+@media (max-width: 1200px) {
+#picdiv img {
+  float: left;
+  width: 25vw;
+  height: 14vh;
+}
+
+#picdiv {
+  width: 80vw;
+  clear: both;
+  height: 15vh;
+}
+
+#textdiv, #divstories{
+  width: 37vw;
+}
+}
+@media (max-width: 850px) {
+
+#nav h3:not(:nth-child(2)) {
+float: left;
+}
+#nav h3:nth-child(2) {
+  float: left;
+}
+
+#nav h3:nth-child(3) {
+  clear: left;
+}
+#storyonepic {
+  float: none;
+}
+#storyone p, h1 {
+  width: 80vw;
+}
+#divstories {
+  width: 80vw;
+}
+#textdiv {
+  width: 80vw;
+  display: block;
+
+}
+#picdiv img {
+  width: 80vw;
+display: block;
+}
+
+#picdiv {
+  overflow: hidden;
+  height: 40vh;
+}
+
+}
+/*#storyone {
+  width: 90vw;
+  display: flex;
+}
+#storyonepic {
+order: 2;
+}*/
+/*#storyone::after {
+  background-color: red;
+  content: "<div id='storyonepic'>";
+}*/
+/*#nav h3:nth-child(3) {
+  float: left;
+}*/
+
+/*.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}*/
