responsive shuffle of images and breakpoints complete

--- a/css/style.css
+++ b/css/style.css
@@ -2,143 +2,95 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px dashed rgba(79, 128, 81, 0.64);
-
+  border: 1px dashed rgba(237, 103, 18, 1);
+}
+body {
+  padding: 2vh;
+  background-color: rgb(173, 173, 173);
 }
 #intro {
-  height: 8vh;
-  width: 80vw;
-  margin: 3vh auto;
-}
-#nav h3{
-  float: right;
-}
-
-#nav h3:nth-child(2) {
-  float: left;
-}
-
-#nav h1 {
-  float: left;
-}
-
-#storyone {
-  width: 80vw;
-  margin: 3vh auto;
-}
-
-#storyonepic {
-  float: right;
-  margin: 2vh 2vw;
-}
-
-#storyone p {
-  width: 30vw;
-}
-#picdiv {
-float: left;
-width: 24vw;
-height: 30vh;
-margin: 1vh 1vw;
-}
-#picdiv img {
-display: block;
-height: 10vh;
-}
-#textdiv {
-  height: 30vh;
-  float: left;
-  margin: 1vh 1vw;
-  width: 24vw;
-}
-#textdiv p {
-  height: 10vh;
-}
-#divstories {
-  float: left;
-  height: 30vh;
-  width: 24vw;
-  margin: 1vh 1vw;
-}
-#divstories div {
-  height: 10vh;
-}
-#testblock {
-  overflow: hidden;
-  width: 80vw;
-  margin: 0 auto;
-}
-@media (max-width: 1200px) {
-#picdiv img {
-  float: left;
-  width: 25vw;
-  height: 14vh;
-}
-
-#picdiv {
-  width: 80vw;
-  clear: both;
+  width: 90vh;
   height: 15vh;
 }
 
-#textdiv, #divstories{
-  width: 37vw;
-}
-}
-@media (max-width: 850px) {
-
-#nav h3:not(:nth-child(2)) {
-float: left;
-}
-#nav h3:nth-child(2) {
-  float: left;
+h1 {
+  margin: 2vh;
 }
 
-#nav h3:nth-child(3) {
-  clear: left;
+#goaway {
+  display: none;
 }
-#storyonepic {
-  float: none;
-}
-#storyone p, h1 {
-  width: 80vw;
-}
-#divstories {
-  width: 80vw;
-}
-#textdiv {
-  width: 80vw;
-  display: block;
-
-}
-#picdiv img {
-  width: 80vw;
-display: block;
-}
-
-#picdiv {
-  overflow: hidden;
-  height: 40vh;
-}
-
-}
-/*#storyone {
-  width: 90vw;
-  display: flex;
-}
-#storyonepic {
-order: 2;
-}*/
-/*#storyone::after {
-  background-color: red;
-  content: "<div id='storyonepic'>";
-}*/
-/*#nav h3:nth-child(3) {
-  float: left;
-}*/
-
-/*.clearfix::after {
+.clearfix::after {
   content: "";
   display: block;
   clear: both;
+}
+
+.pic {
+  display: none;
+  height: 20vmin;
+  width: 20vmin;
+  background-color: rgb(82, 82, 82);
+}
+
+#textone, #texttwo, #textthree {
+  margin: 2vh 0;
+
+
+}
+
+@media (min-width: 715px) {
+  .pic {
+    display: block;
+    margin-right: 1%;
+    margin-left: 1%;
+  }
+.pic:not(#notme) {
+float: left;
+}
+#notme {
+float: right;
+}
+
+#textone, #texttwo, #textthree {
+  height: 20vmin;
+  width: 90vmin;
+  margin: 3vh auto;
+
+
+}
+}
+@media (min-width: 1000px) {
+  #goaway {
+    display: inline-block;
+    float: right;
+    clear: left;
+
+  }
+  #textone, #texttwo, #textthree {
+    height: 33vh;
+    width: 30vw;
+    margin: 1vh auto;
+    display: inline-block;
+text-align: center;
+  }
+  .pic {
+    height: 15vmin;
+    width: 15vmin;
+    margin: 3vh auto;
+  }
+  .pic:not(#notme) {
+  float: none;
+  }
+  #notme {
+  float: none;
+  }
+#texts {
+  clear: both;
+}
+
+/*.intro h1:nth-child(1) {
+  float: left;
+  background-color: blue;
 }*/
+}
