Add new theme and centering

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 1px dashed rgba(237, 103, 18, 1);
+  /*border: 1px dashed rgba(237, 103, 18, 1);*/
+
 }
 body {
   padding: 2vh;
-  background-color: rgb(173, 173, 173);
+  background-color: rgb(233, 233, 233);
+  color: rgba(51, 51, 51, 0.9);
+}
+
+div {
+  background-color: rgba(145, 170, 182, 0.64)
 }
 #intro {
   width: 90vh;
@@ -68,9 +74,9 @@ float: right;
 
   }
   #textone, #texttwo, #textthree {
-    height: 33vh;
-    width: 30vw;
-    margin: 1vh auto;
+    height: 37vh;
+    width: 30.4vw;
+    margin: 1vh .5vw;
     display: inline-block;
 text-align: center;
   }
@@ -87,6 +93,7 @@ text-align: center;
   }
 #texts {
   clear: both;
+  text-align: center;
 }
 
 /*.intro h1:nth-child(1) {
